tests/golden/cnpg-platform/netpol-namespace-metadata.yaml
---
# Source: cnpg-platform/templates/metrics-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pg-metrics
  namespace: pg-plain
  labels:
    app.kubernetes.io/name: cnpg-platform
    app.kubernetes.io/instance: cnpg-platform
    app.kubernetes.io/managed-by: Helm
    example.com/layer: network
  annotations:
    example.com/wave: "15"
spec:
  podSelector:
    matchExpressions:
      - key: cnpg.io/cluster
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9187
          protocol: TCP

---
# Source: cnpg-platform/templates/metrics-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pg-metrics
  namespace: pg-primary
  labels:
    app.kubernetes.io/name: cnpg-platform
    app.kubernetes.io/instance: cnpg-platform
    app.kubernetes.io/managed-by: Helm
    example.com/layer: network
    example.com/tier: primary
  annotations:
    example.com/sync-options: Prune=false
    example.com/wave: "15"
spec:
  podSelector:
    matchExpressions:
      - key: cnpg.io/cluster
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9187
          protocol: TCP
